mynw-monitoring/templates/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ipc-monitoring
  labels:
    versionNo: 0.0.2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: monitoring-icp
        solution: monitoring-mcm
        tier: backend
        track: stable
        role: web
    spec:
      imagePullSecrets:
        - name: regsecret
      containers:
        - name: moniotoring-image-icp
          image: 038180458258.dkr.ecr.eu-west-1.amazonaws.com/monitoring:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
