mynw-monitoring/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
  labels:
    solution: monitoring-mcm
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /monitoring-mcm
        backend:
          serviceName: mynw-svc
          servicePort: 5000
